--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </div>
 
                     <div>
-                        <h2 class="about__subtitle">I'am Jhon Doe</h2>
+                        <h2 class="about__subtitle">I'am Sourabh Soni</h2>
                         <span class="about__profession">Web designer</span>
                         <p class="about__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci consectetur, architecto quas fugiat, iste inventore facere repellendus delectus id, vitae blanditiis.</p>
 
@@ -159,10 +159,10 @@
                         <span class="contact__text">info.mail.com</span>
 
                         <h3 class="contact__subtitle">PHONE</h3>
-                        <span class="contact__text">+20 999-999</span>
+                        <span class="contact__text">+91 75660 73022</span>
 
-                        <h3 class="contact__subtitle">ADRESS</h3>
-                        <span class="contact__text">My contry</span>
+                        <h3 class="contact__subtitle">Kota (Rajasthan)</h3>
+                        <span class="contact__text">India</span>
                     </div>
 
                     <form action="" class="contact__form">
@@ -183,8 +183,8 @@
         <footer class="footer section">
             <div class="footer__container bd-grid">
                 <div class="footer__data">
-                    <h2 class="footer__title">JHON DOE</h2>
-                    <p class="footer__text">I'm Jhon Doe and this is my personal website</p>
+                    <h2 class="footer__title">Sourabh Soni</h2>
+                    <p class="footer__text">I'm Sourabh Soni and this is my personal website</p>
                 </div>
 
                 <div class="footer__data">
