--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                 <div class="about__container bd-grid">
                     <div class="about__img">
-                        <img src="assets/img/perfil.png" alt="">
+                        <img src="https://scontent.famd3-1.fna.fbcdn.net/v/t1.6435-9/143787840_1532636480260408_6963799833604510128_n.jpg?_nc_cat=105&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=wd5-zP9de-YAX9U_3ui&_nc_ht=scontent.famd3-1.fna&oh=3175afb4acf673c77820316fba2136dc&oe=60E43BEE" alt="">
                     </div>
 
                     <div>
