--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                 <div class="about__container bd-grid">
                     <div class="about__img">
-                        <img src="https://scontent.famd3-1.fna.fbcdn.net/v/t1.6435-9/121109604_2801583306775978_9183841086183423522_n.jpg?_nc_cat=103&ccb=1-3&_nc_sid=8bfeb9&_nc_ohc=lzfhyEv8cNUAX-cpNKR&_nc_ht=scontent.famd3-1.fna&oh=f5da538f4f934a2e33016617589beb1e&oe=60E7953D" alt="" style="width: fit-content;">
+                        <img src="https://scontent.famd3-1.fna.fbcdn.net/v/t1.6435-9/121109604_2801583306775978_9183841086183423522_n.jpg?_nc_cat=103&ccb=1-3&_nc_sid=8bfeb9&_nc_ohc=lzfhyEv8cNUAX-cpNKR&_nc_ht=scontent.famd3-1.fna&oh=f5da538f4f934a2e33016617589beb1e&oe=60E7953D" alt="" style="width: 200px;height: 200px;margin: -20px;">
                     </div>
 
                     <div>
